# luminoveau

./: .clang-tidy  .gitignore  API.md  CMakeLists.txt  LICENSE.md  README.md  luminoveau.h  test_3d_rendering.cpp
.github/workflows/: deploy_docs.yml
app/: lumi.h
assethandler/: DroidSansMono.cpp  assethandler.cpp  assethandler.h  model3dfrag.cpp  model3dvert.cpp  shaders_generated.h  spritebatchfrag.cpp  spritebatchvert.cpp  spritefrag.cpp  spriteinstancedfrag.cpp  spriteinstancedvert.cpp  spritevert.cpp
assethandler/shaders/: fullscreen_quad_frag.dxil.cpp  fullscreen_quad_frag.spirv.cpp  fullscreen_quad_vert.dxil.cpp  fullscreen_quad_vert.spirv.cpp  model3d_frag.dxil.cpp  model3d_frag.spirv.cpp  model3d_vert.dxil.cpp  model3d_vert.metallib.cpp  model3d_vert.spirv.cpp  particles_comp.spirv.cpp  particles_frag.dxil.cpp  particles_frag.spirv.cpp  particles_vert.dxil.cpp  particles_vert.spirv.cpp  sprite_frag.dxil.cpp  sprite_frag.metallib.cpp  sprite_frag.spirv.cpp  sprite_vert.dxil.cpp  sprite_vert.spirv.cpp
assets/: shell.html
assettypes/: computepipeline.h  effect.h  effecthandler.h  font.h  model.h  music.h  particlesystem.h  pcmsound.h  shader.h  sound.h  texture.h
audio/: audiohandler.cpp  audiohandler.h
buffer/: buffer.h  buffermanager.cpp  buffermanager.h
cmake/: AssetPreparation.cmake  CopyAssets.cmake  CopyRuntimeDLLs.cmake  DependencySetup.cmake  DownloadDXC.cmake  DownloadSPIRVCross.cmake  Glslang.cmake  ImGuiIntegration.cmake  LumiMessage.cmake  LuminoveauConfig.cmake.in  RmlUiIntegration.cmake  ShaderCross.cmake  ShaderTranspile.cmake  ShaderTranspileOne.cmake  Sources.Shaders.cmake  Sources.cmake  SpirvCross.cmake  SteamDetection.cmake  WebGpuDependency.cmake  XcodeConfiguration.cmake  assetpacker.cmake  checkforimgui.cmake  checkforsteam.cmake  getlibraries.cmake
configuration/: configuration.h
doxygen/: Doxyfile
draw/: drawhandler.cpp  drawhandler.h
enginestate/: enginestate.h
eventbus/: eventbushandler.cpp  eventbushandler.h
file/: filehandler.cpp  filehandler.h
fonts/: fonthandler.cpp  fonthandler.h
input/: inputconstants.h  inputdevice.cpp  inputdevice.h  inputhandler.cpp  inputhandler.h  virtualcontrols.cpp  virtualcontrols.h
log/: loghandler.cpp  loghandler.h
render2d/: SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h  SDL2_rotozoom.c  SDL2_rotozoom.h  render2dhandler.cpp  render2dhandler.h
renderer/: arrayrenderpass.cpp  arrayrenderpass.h  computehandler.cpp  computehandler.h  geometry2d.cpp  geometry2d.h  model3drenderpass.cpp  model3drenderpass.h  particlerenderer.cpp  particlerenderer.h  renderable.h  rendererhandler.cpp  rendererhandler.h  renderpass.h  resourcepack.cpp  sdl_gpu_structs.cpp  sdl_gpu_structs.h  shaderhandler.cpp  shaderhandler.h  shaderrenderpass.cpp  shaderrenderpass.h  spriterenderpass.cpp  spriterenderpass.h
rmlui/: rmluibackend.cpp  rmluibackend.h  rmluihandler.cpp  rmluihandler.h  rmluisystemlog.h
scripts/: CompileHalfPrecisionShader.ps1  CompileInstancedShaders.ps1  batchsprite.vert.hlsl  sprite_instanced.frag.h  sprite_instanced.frag.hlsl  sprite_instanced.frag.spv  sprite_instanced.vert.h  sprite_instanced.vert.hlsl  sprite_instanced.vert.spv  updateShaders.ps1
settings/: settingshandler.cpp  settingshandler.h
shaders/: compile_model3d.ps1  compile_shaders.ps1  fullscreen_quad.frag.hlsl  fullscreen_quad.frag.wgsl  fullscreen_quad.vert.hlsl  fullscreen_quad.vert.wgsl  model3d.frag  model3d.frag.hlsl  model3d.frag.wgsl  model3d.vert  model3d.vert.hlsl  model3d.vert.wgsl  particles.comp.hlsl  particles.comp.wgsl  particles.frag.hlsl  particles.frag.wgsl  particles.vert.hlsl  particles.vert.wgsl  particles_pov.frag.hlsl  particles_pov.frag.wgsl  particles_pov.vert.hlsl  particles_pov.vert.wgsl  sprite.frag.hlsl  sprite.frag.wgsl  sprite.vert.hlsl  sprite.vert.wgsl
src/: config.h
src/app/: app.h  lumi_main.cpp
src/assets/: assethandler.cpp  assethandler.h  shaders_generated.h
src/assets/audio/: soundinstance.h
src/assets/compute/: computepipeline.h
src/assets/effect/: effect.h  effecthandler.h  effects.h
src/assets/font/: font.h
src/assets/model/: model.h
src/assets/sdl/: assethandler.cpp
src/assets/shader/: shader.h
src/assets/shaders/: fullscreen_quad_frag.dxil.cpp  fullscreen_quad_frag.metallib.cpp  fullscreen_quad_frag.spirv.cpp  fullscreen_quad_frag.wgsl.cpp  fullscreen_quad_vert.dxil.cpp  fullscreen_quad_vert.metallib.cpp  fullscreen_quad_vert.spirv.cpp  fullscreen_quad_vert.wgsl.cpp  model3d_frag.dxil.cpp  model3d_frag.metallib.cpp  (+31 more)
src/draw/: draw.cpp  draw.h  particles.cpp  particles.h  particles_builtin.h  particlesystem.h  text.cpp  text.h  texthandler.cpp  texthandler.h
src/file/: filehandler.cpp  filehandler.h  resourcepack.cpp  resourcepack.h
src/gpu/: IBackendAccess.h  IGpu.cpp  IGpu.h  handles.h  presets.h  renderable.h  renderpass.h  types.h
src/interfaces/: IAudio.h  IFileSystem.h  IInput.h  IRenderer.h  IWindow.h
src/math/: angles.h  constants.h  rectangles.cpp  rectangles.h  vectors.cpp
src/profiler/: perf.cpp  perf.h  perf_metal.mm
src/renderer/: compute.cpp  compute.h  computehandler.cpp  computehandler.h  renderer.cpp  renderer.h  shaderhandler.cpp  shaderhandler.h  shaders.cpp  shaders.h
src/scene/: camera.h  camera3d.h  scene3d.cpp  scene3d.h
src/types/: color.h
src/util/: helpers.cpp  helpers.h  lerp.cpp  lerp.h  quadtree.h
state/: basestate.h  state.cpp  state.h
steam/: steamhandler.cpp  steamhandler.h
text/: texthandler.cpp  texthandler.h
texture/: texturehandler.cpp  texturehandler.h
utils/: angles.h  camera.h  camera3d.h  colors.h  constants.h  helpers.cpp  helpers.h  lerp.cpp  lerp.h  quadtree.h  rectangles.h  resourcepack.cpp  scene3d.cpp  scene3d.h  shader.h  uniformobject.h  vectors.cpp  vectors.h
window/: imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlrenderer3.cpp  renderable.h  renderpass.cpp  renderpass.h  shaderrenderpass.cpp  shaderrenderpass.h  spriterenderpass.cpp  spriterenderpass.h  textrenderpass.cpp  textrenderpass.h  windowhandler.cpp  windowhandler.h
(+86 files in other folders)
